--- a/Adv Blog Website/views/footer.ejs
+++ b/Adv Blog Website/views/footer.ejs
@@ -1,7 +1,7 @@
     </div>
     <div class="footer-padding"></div>
     <div class="footer">
-      <p>Made with ❤️ by The App Brewery</p>
+      <p>©Copyright 2022 Seungku Choi</p>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
