--- a/Simon Game/style.css
+++ b/Simon Game/style.css
@@ -46,3 +46,10 @@ h1 {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
+
+footer p {
+  margin-top: 5%;
+  color: #eeeeee;
+  font-family: "Press Start 2P", cursive;
+  font-size: 1rem;
+}
